--- a/RecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerView/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
+        android:onClick="navigate"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
