--- a/RecyclerView/app/src/main/res/layout/layout_cards.xml
+++ b/RecyclerView/app/src/main/res/layout/layout_cards.xml
@@ -7,6 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
+        android:onClick="navigate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
