--- a/RecyclerView/app/src/main/res/values/colors.xml
+++ b/RecyclerView/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="bgColor">#F6F6F6</color>
     <color name="card_bg_color">#F6F6F6</color>
     <color name="title_text_color">#258bd6</color>
