--- a/RecyclerView/app/src/main/res/layout/activity_fixtures.xml
+++ b/RecyclerView/app/src/main/res/layout/activity_fixtures.xml
@@ -18,9 +18,7 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            app:tabInlineLabel="true"/>
+            android:layout_height="32dp" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
