--- a/RecyclerView/app/src/main/res/values/colors.xml
+++ b/RecyclerView/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#660066 </color>
+    <color name="colorPrimaryDark">#330033</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="bgColor">#F6F6F6</color>
     <color name="card_bg_color">#F6F6F6</color>
     <color name="title_text_color">#258bd6</color>
